# fabric-business-doc-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  config_gui.bat  config_gui.py  config_gui.sh  prompts.md  pyproject.toml  requirements.txt  run.bat  run.sh
agent/: config.py  git_cloner.py  main.py  prompts.py
agent/ai/: base_client.py  client_factory.py  copilot_client.py  llm_client.py  local_claude_client.py  utils.py
agent/enrichers/: ticket_enricher.py
agent/generators/: doc_generator.py
agent/parsers/: base_parser.py  dataflow_parser.py  notebook_parser.py  parser_registry.py  pipeline_parser.py  powerautomate_parser.py
agent/publishers/: base_wiki_publisher.py  confluence_publisher.py  wiki_factory.py  wiki_publisher.py
agent/rag/: indexer.py  retriever.py
output/: Diabetes Prediction Pipeline.md  EU Population Data Ingestion.md  EU Population Dataflow.md  Population Data Refresh Notification.md
prompts/: business_goal.md  column_lineage.md  data_quality.md  flow.md  lineage_system_prompt.md  purpose.md  system_prompt.md
samples/dataflows/: eu_population_dataflow.json
samples/pipelines/: diabetes_prediction_pipeline.json  population_data_ingestion.json
tests/: conftest.py  test_client_factory.py  test_confluence_publisher.py  test_copilot_client.py  test_dataflow_parser.py  test_doc_generator.py  test_local_claude_client.py  test_output_cleaners.py  test_parsers.py  test_powerautomate_parser.py  test_prompts.py  test_rag.py  test_system_prompt.py  test_ticket_enricher.py  test_wiki_factory.py  test_wiki_publisher.py
(+1 files in other folders)
