[project]
name = "fabric-business-doc-agent"
version = "0.1.0"
description = "AI-powered business documentation generator for Microsoft Fabric pipelines, notebooks, and dataflows"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
agent = "agent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
